// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition hook should return with SelectField props 1`] = `
Object {
  "aria-invalid": false,
  "aria-required": undefined,
  "children": <React.Fragment>
    <option
      value="sunny"
    >
      Sunny
    </option>
    <option
      value="windy"
    >
      Windy
    </option>
    <option
      value="overcast"
    >
      Overcast
    </option>
  </React.Fragment>,
  "className": "css-1kur5z3 css-1pwrqjj css-3ekj6a fp-Box fp-Select",
  "disabled": undefined,
  "label": "This is a label",
  "onChange": [Function],
  "unstable_wrap": [Function],
}
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-7 {
  margin-bottom: 0.5rem !important;
}

.emotion-5 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  line-height: 1 !important;
}

.emotion-0 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-17 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-14.emotion-14 {
  position: absolute;
  width: 0.8em;
  height: 2.5em;
  right: 0.8em;
  z-index: 1;
  color: #212121;
  fill: #212121;
  pointer-events: none;
}

.emotion-11 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #d9d9d9;
  border-radius: 0.2em;
  color: #797979;
  height: 2.5em;
  padding: 0.4em 2em 0.4em 0.6em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-8:hover {
  box-shadow: #ebe8fd 0px 0px 0px 2px !important;
  border-color: #c3bcf9;
}

.emotion-8[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
}

.emotion-8[disabled] + .fp-Icon {
  color: #8d8d8d;
  fill: #8d8d8d;
}

.emotion-8:focus {
  outline: unset;
  z-index: 2;
  border-color: #3722ed;
  box-shadow: #ebe8fd 0px 0px 0px 3px !important;
}

.emotion-23 {
  color: #3722ed !important;
}

<div
  class="emotion-3 emotion-1 emotion-23 test fp-Box fp-SelectField"
>
  <div
    class="emotion-3 emotion-1 emotion-2 fp-Box fp-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-7 fp-Box"
    >
      <div
        class="emotion-1 emotion-5 fp-Box"
      >
        <label
          class="emotion-0 emotion-1 emotion-2 emotion-3 fp-FieldWrapperLabel fp-Box fp-Label"
          for="FieldWrapper"
        >
          This is a label
        </label>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2 emotion-17 fp-SelectWrapper fp-Box"
    >
      <select
        aria-invalid="false"
        class="emotion-8 emotion-1 emotion-2 fp-Box fp-Select"
        id="FieldWrapper"
      >
        <option
          value=""
        >
          Please select...
        </option>
        <option
          value="sunny"
        >
          Sunny
        </option>
        <option
          value="windy"
        >
          Windy
        </option>
        <option
          value="overcast"
        >
          Overcast
        </option>
      </select>
      <svg
        class="emotion-11 emotion-1 emotion-2 emotion-14 fp-SelectIcon fp-Box fp-Icon"
        role="img"
        viewBox="0 0 448 512"
      >
        <path
          d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`overrides SelectField.root should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-7 {
  margin-bottom: 0.5rem !important;
}

.emotion-5 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  line-height: 1 !important;
}

.emotion-0 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-17 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-14.emotion-14 {
  position: absolute;
  width: 0.8em;
  height: 2.5em;
  right: 0.8em;
  z-index: 1;
  color: #212121;
  fill: #212121;
  pointer-events: none;
}

.emotion-11 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #d9d9d9;
  border-radius: 0.2em;
  color: #797979;
  height: 2.5em;
  padding: 0.4em 2em 0.4em 0.6em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-8:hover {
  box-shadow: #ebe8fd 0px 0px 0px 2px !important;
  border-color: #c3bcf9;
}

.emotion-8[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
}

.emotion-8[disabled] + .fp-Icon {
  color: #8d8d8d;
  fill: #8d8d8d;
}

.emotion-8:focus {
  outline: unset;
  z-index: 2;
  border-color: #3722ed;
  box-shadow: #ebe8fd 0px 0px 0px 3px !important;
}

.emotion-21 {
  background-color: red;
}

<div
  class="emotion-21 emotion-1 emotion-2 fp-Box fp-SelectField"
>
  <div
    class="emotion-3 emotion-1 emotion-2 fp-Box fp-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-7 fp-Box"
    >
      <div
        class="emotion-1 emotion-5 fp-Box"
      >
        <label
          class="emotion-0 emotion-1 emotion-2 emotion-3 fp-FieldWrapperLabel fp-Box fp-Label"
          for="FieldWrapper"
        >
          This is a label
        </label>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2 emotion-17 fp-SelectWrapper fp-Box"
    >
      <select
        aria-invalid="false"
        class="emotion-8 emotion-1 emotion-2 fp-Box fp-Select"
        id="FieldWrapper"
      >
        <option
          value=""
        >
          Please select...
        </option>
        <option
          value="sunny"
        >
          Sunny
        </option>
        <option
          value="windy"
        >
          Windy
        </option>
        <option
          value="overcast"
        >
          Overcast
        </option>
      </select>
      <svg
        class="emotion-11 emotion-1 emotion-2 emotion-14 fp-SelectIcon fp-Box fp-Icon"
        role="img"
        viewBox="0 0 448 512"
      >
        <path
          d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-7 {
  margin-bottom: 0.5rem !important;
}

.emotion-5 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  line-height: 1 !important;
}

.emotion-0 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-17 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-14.emotion-14 {
  position: absolute;
  width: 0.8em;
  height: 2.5em;
  right: 0.8em;
  z-index: 1;
  color: #212121;
  fill: #212121;
  pointer-events: none;
}

.emotion-8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #d9d9d9;
  border-radius: 0.2em;
  color: #212121;
  height: 2.5em;
  padding: 0.4em 2em 0.4em 0.6em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-8:hover {
  box-shadow: #ebe8fd 0px 0px 0px 2px !important;
  border-color: #c3bcf9;
}

.emotion-8[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
}

.emotion-8[disabled] + .fp-Icon {
  color: #8d8d8d;
  fill: #8d8d8d;
}

.emotion-8:focus {
  outline: unset;
  z-index: 2;
  border-color: #3722ed;
  box-shadow: #ebe8fd 0px 0px 0px 3px !important;
}

.emotion-11 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

<div
  class="emotion-3 emotion-1 emotion-2 fp-Box fp-SelectField"
>
  <div
    class="emotion-3 emotion-1 emotion-2 fp-Box fp-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-7 fp-Box"
    >
      <div
        class="emotion-1 emotion-5 fp-Box"
      >
        <label
          class="emotion-0 emotion-1 emotion-2 emotion-3 fp-FieldWrapperLabel fp-Box fp-Label"
          for="FieldWrapper"
        >
          This is a label
        </label>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2 emotion-17 fp-SelectWrapper fp-Box"
    >
      <select
        aria-invalid="false"
        class="emotion-8 emotion-1 emotion-2 fp-Box fp-Select"
        id="FieldWrapper"
      >
        <option
          value="sunny"
        >
          Sunny
        </option>
        <option
          value="windy"
        >
          Windy
        </option>
        <option
          value="overcast"
        >
          Overcast
        </option>
      </select>
      <svg
        class="emotion-11 emotion-1 emotion-2 emotion-14 fp-SelectIcon fp-Box fp-Icon"
        role="img"
        viewBox="0 0 448 512"
      >
        <path
          d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`props should render correctly for danger state 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-7 {
  margin-bottom: 0.5rem !important;
}

.emotion-5 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  line-height: 1 !important;
}

.emotion-0 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-17 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-14.emotion-14 {
  position: absolute;
  width: 0.8em;
  height: 2.5em;
  right: 0.8em;
  z-index: 1;
  color: #212121;
  fill: #212121;
  pointer-events: none;
}

.emotion-11 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #d9d9d9;
  border-radius: 0.2em;
  color: #212121;
  height: 2.5em;
  padding: 0.4em 2em 0.4em 0.6em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-8:hover {
  box-shadow: #f8e9e8 0px 0px 0px 2px !important;
  border-color: #eabfba;
}

.emotion-8[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
}

.emotion-8[disabled] + .fp-Icon {
  color: #8d8d8d;
  fill: #8d8d8d;
}

.emotion-8:focus {
  outline: unset;
  z-index: 2;
  border-color: #3722ed;
  box-shadow: #ebe8fd 0px 0px 0px 3px !important;
}

.emotion-8 {
  border-color: #bb2a1a;
  box-shadow: #f8e9e8 0px 0px 0px 3px !important;
}

<div
  class="emotion-3 emotion-1 emotion-2 fp-Box fp-SelectField"
>
  <div
    class="emotion-3 emotion-1 emotion-2 fp-Box fp-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-7 fp-Box"
    >
      <div
        class="emotion-1 emotion-5 fp-Box"
      >
        <label
          class="emotion-0 emotion-1 emotion-2 emotion-3 fp-FieldWrapperLabel fp-Box fp-Label"
          for="FieldWrapper"
        >
          This is a label
        </label>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2 emotion-17 fp-SelectWrapper fp-Box"
    >
      <select
        aria-invalid="true"
        class="emotion-8 emotion-1 emotion-2 fp-Box fp-Select"
        id="FieldWrapper"
      >
        <option
          value="sunny"
        >
          Sunny
        </option>
        <option
          value="windy"
        >
          Windy
        </option>
        <option
          value="overcast"
        >
          Overcast
        </option>
      </select>
      <svg
        class="emotion-11 emotion-1 emotion-2 emotion-14 fp-SelectIcon fp-Box fp-Icon"
        role="img"
        viewBox="0 0 448 512"
      >
        <path
          d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`props should render correctly for large size 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-7 {
  margin-bottom: 0.5rem !important;
}

.emotion-5 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  line-height: 1 !important;
}

.emotion-0 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-14.emotion-14 {
  position: absolute;
  width: 0.8em;
  height: 2.5em;
  right: 0.8em;
  z-index: 1;
  color: #212121;
  fill: #212121;
  pointer-events: none;
}

.emotion-8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #d9d9d9;
  border-radius: 0.2em;
  color: #212121;
  height: 2.5em;
  padding: 0.4em 2em 0.4em 0.6em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-8:hover {
  box-shadow: #ebe8fd 0px 0px 0px 2px !important;
  border-color: #c3bcf9;
}

.emotion-8[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
}

.emotion-8[disabled] + .fp-Icon {
  color: #8d8d8d;
  fill: #8d8d8d;
}

.emotion-8:focus {
  outline: unset;
  z-index: 2;
  border-color: #3722ed;
  box-shadow: #ebe8fd 0px 0px 0px 3px !important;
}

.emotion-11 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-17 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 1.5rem;
}

<div
  class="emotion-3 emotion-1 emotion-2 fp-Box fp-SelectField"
>
  <div
    class="emotion-3 emotion-1 emotion-2 fp-Box fp-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-7 fp-Box"
    >
      <div
        class="emotion-1 emotion-5 fp-Box"
      >
        <label
          class="emotion-0 emotion-1 emotion-2 emotion-3 fp-FieldWrapperLabel fp-Box fp-Label"
          for="FieldWrapper"
        >
          This is a label
        </label>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2 emotion-17 fp-SelectWrapper fp-Box"
    >
      <select
        aria-invalid="false"
        class="emotion-8 emotion-1 emotion-2 fp-Box fp-Select"
        id="FieldWrapper"
      >
        <option
          value="sunny"
        >
          Sunny
        </option>
        <option
          value="windy"
        >
          Windy
        </option>
        <option
          value="overcast"
        >
          Overcast
        </option>
      </select>
      <svg
        class="emotion-11 emotion-1 emotion-2 emotion-14 fp-SelectIcon fp-Box fp-Icon"
        role="img"
        viewBox="0 0 448 512"
      >
        <path
          d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`props should render correctly for medium size 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-7 {
  margin-bottom: 0.5rem !important;
}

.emotion-5 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  line-height: 1 !important;
}

.emotion-0 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-14.emotion-14 {
  position: absolute;
  width: 0.8em;
  height: 2.5em;
  right: 0.8em;
  z-index: 1;
  color: #212121;
  fill: #212121;
  pointer-events: none;
}

.emotion-8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #d9d9d9;
  border-radius: 0.2em;
  color: #212121;
  height: 2.5em;
  padding: 0.4em 2em 0.4em 0.6em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-8:hover {
  box-shadow: #ebe8fd 0px 0px 0px 2px !important;
  border-color: #c3bcf9;
}

.emotion-8[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
}

.emotion-8[disabled] + .fp-Icon {
  color: #8d8d8d;
  fill: #8d8d8d;
}

.emotion-8:focus {
  outline: unset;
  z-index: 2;
  border-color: #3722ed;
  box-shadow: #ebe8fd 0px 0px 0px 3px !important;
}

.emotion-11 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-17 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 1.25rem;
}

<div
  class="emotion-3 emotion-1 emotion-2 fp-Box fp-SelectField"
>
  <div
    class="emotion-3 emotion-1 emotion-2 fp-Box fp-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-7 fp-Box"
    >
      <div
        class="emotion-1 emotion-5 fp-Box"
      >
        <label
          class="emotion-0 emotion-1 emotion-2 emotion-3 fp-FieldWrapperLabel fp-Box fp-Label"
          for="FieldWrapper"
        >
          This is a label
        </label>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2 emotion-17 fp-SelectWrapper fp-Box"
    >
      <select
        aria-invalid="false"
        class="emotion-8 emotion-1 emotion-2 fp-Box fp-Select"
        id="FieldWrapper"
      >
        <option
          value="sunny"
        >
          Sunny
        </option>
        <option
          value="windy"
        >
          Windy
        </option>
        <option
          value="overcast"
        >
          Overcast
        </option>
      </select>
      <svg
        class="emotion-11 emotion-1 emotion-2 emotion-14 fp-SelectIcon fp-Box fp-Icon"
        role="img"
        viewBox="0 0 448 512"
      >
        <path
          d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`props should render correctly for small size 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-7 {
  margin-bottom: 0.5rem !important;
}

.emotion-5 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  line-height: 1 !important;
}

.emotion-0 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-14.emotion-14 {
  position: absolute;
  width: 0.8em;
  height: 2.5em;
  right: 0.8em;
  z-index: 1;
  color: #212121;
  fill: #212121;
  pointer-events: none;
}

.emotion-8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #d9d9d9;
  border-radius: 0.2em;
  color: #212121;
  height: 2.5em;
  padding: 0.4em 2em 0.4em 0.6em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-8:hover {
  box-shadow: #ebe8fd 0px 0px 0px 2px !important;
  border-color: #c3bcf9;
}

.emotion-8[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
}

.emotion-8[disabled] + .fp-Icon {
  color: #8d8d8d;
  fill: #8d8d8d;
}

.emotion-8:focus {
  outline: unset;
  z-index: 2;
  border-color: #3722ed;
  box-shadow: #ebe8fd 0px 0px 0px 3px !important;
}

.emotion-11 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-17 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 0.875rem;
}

<div
  class="emotion-3 emotion-1 emotion-2 fp-Box fp-SelectField"
>
  <div
    class="emotion-3 emotion-1 emotion-2 fp-Box fp-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-7 fp-Box"
    >
      <div
        class="emotion-1 emotion-5 fp-Box"
      >
        <label
          class="emotion-0 emotion-1 emotion-2 emotion-3 fp-FieldWrapperLabel fp-Box fp-Label"
          for="FieldWrapper"
        >
          This is a label
        </label>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2 emotion-17 fp-SelectWrapper fp-Box"
    >
      <select
        aria-invalid="false"
        class="emotion-8 emotion-1 emotion-2 fp-Box fp-Select"
        id="FieldWrapper"
      >
        <option
          value="sunny"
        >
          Sunny
        </option>
        <option
          value="windy"
        >
          Windy
        </option>
        <option
          value="overcast"
        >
          Overcast
        </option>
      </select>
      <svg
        class="emotion-11 emotion-1 emotion-2 emotion-14 fp-SelectIcon fp-Box fp-Icon"
        role="img"
        viewBox="0 0 448 512"
      >
        <path
          d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`props should render correctly for success state 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-7 {
  margin-bottom: 0.5rem !important;
}

.emotion-5 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  line-height: 1 !important;
}

.emotion-0 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-17 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-14.emotion-14 {
  position: absolute;
  width: 0.8em;
  height: 2.5em;
  right: 0.8em;
  z-index: 1;
  color: #212121;
  fill: #212121;
  pointer-events: none;
}

.emotion-11 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #d9d9d9;
  border-radius: 0.2em;
  color: #212121;
  height: 2.5em;
  padding: 0.4em 2em 0.4em 0.6em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-8:hover {
  box-shadow: #e7f0e8 0px 0px 0px 2px !important;
  border-color: #b7d4ba;
}

.emotion-8[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
}

.emotion-8[disabled] + .fp-Icon {
  color: #8d8d8d;
  fill: #8d8d8d;
}

.emotion-8:focus {
  outline: unset;
  z-index: 2;
  border-color: #3722ed;
  box-shadow: #ebe8fd 0px 0px 0px 3px !important;
}

.emotion-8 {
  border-color: #107219;
  box-shadow: #e7f0e8 0px 0px 0px 3px !important;
}

<div
  class="emotion-3 emotion-1 emotion-2 fp-Box fp-SelectField"
>
  <div
    class="emotion-3 emotion-1 emotion-2 fp-Box fp-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-7 fp-Box"
    >
      <div
        class="emotion-1 emotion-5 fp-Box"
      >
        <label
          class="emotion-0 emotion-1 emotion-2 emotion-3 fp-FieldWrapperLabel fp-Box fp-Label"
          for="FieldWrapper"
        >
          This is a label
        </label>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2 emotion-17 fp-SelectWrapper fp-Box"
    >
      <select
        aria-invalid="false"
        class="emotion-8 emotion-1 emotion-2 fp-Box fp-Select"
        id="FieldWrapper"
      >
        <option
          value="sunny"
        >
          Sunny
        </option>
        <option
          value="windy"
        >
          Windy
        </option>
        <option
          value="overcast"
        >
          Overcast
        </option>
      </select>
      <svg
        class="emotion-11 emotion-1 emotion-2 emotion-14 fp-SelectIcon fp-Box fp-Icon"
        role="img"
        viewBox="0 0 448 512"
      >
        <path
          d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`props should render correctly for warning state 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-7 {
  margin-bottom: 0.5rem !important;
}

.emotion-5 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  line-height: 1 !important;
}

.emotion-0 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-17 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-14.emotion-14 {
  position: absolute;
  width: 0.8em;
  height: 2.5em;
  right: 0.8em;
  z-index: 1;
  color: #212121;
  fill: #212121;
  pointer-events: none;
}

.emotion-11 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #d9d9d9;
  border-radius: 0.2em;
  color: #212121;
  height: 2.5em;
  padding: 0.4em 2em 0.4em 0.6em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-8:hover {
  box-shadow: #fdf5e8 0px 0px 0px 2px !important;
  border-color: #f9e1bc;
}

.emotion-8[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
}

.emotion-8[disabled] + .fp-Icon {
  color: #8d8d8d;
  fill: #8d8d8d;
}

.emotion-8:focus {
  outline: unset;
  z-index: 2;
  border-color: #3722ed;
  box-shadow: #ebe8fd 0px 0px 0px 3px !important;
}

.emotion-8 {
  border-color: #ed9c22;
  box-shadow: #fdf5e8 0px 0px 0px 3px !important;
}

<div
  class="emotion-3 emotion-1 emotion-2 fp-Box fp-SelectField"
>
  <div
    class="emotion-3 emotion-1 emotion-2 fp-Box fp-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-7 fp-Box"
    >
      <div
        class="emotion-1 emotion-5 fp-Box"
      >
        <label
          class="emotion-0 emotion-1 emotion-2 emotion-3 fp-FieldWrapperLabel fp-Box fp-Label"
          for="FieldWrapper"
        >
          This is a label
        </label>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2 emotion-17 fp-SelectWrapper fp-Box"
    >
      <select
        aria-invalid="false"
        class="emotion-8 emotion-1 emotion-2 fp-Box fp-Select"
        id="FieldWrapper"
      >
        <option
          value="sunny"
        >
          Sunny
        </option>
        <option
          value="windy"
        >
          Windy
        </option>
        <option
          value="overcast"
        >
          Overcast
        </option>
      </select>
      <svg
        class="emotion-11 emotion-1 emotion-2 emotion-14 fp-SelectIcon fp-Box fp-Icon"
        role="img"
        viewBox="0 0 448 512"
      >
        <path
          d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-7 {
  margin-bottom: 0.5rem !important;
}

.emotion-5 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  line-height: 1 !important;
}

.emotion-0 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-17 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-14.emotion-14 {
  position: absolute;
  width: 0.8em;
  height: 2.5em;
  right: 0.8em;
  z-index: 1;
  color: #212121;
  fill: #212121;
  pointer-events: none;
}

.emotion-8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #d9d9d9;
  border-radius: 0.2em;
  color: #212121;
  height: 2.5em;
  padding: 0.4em 2em 0.4em 0.6em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-8:hover {
  box-shadow: #ebe8fd 0px 0px 0px 2px !important;
  border-color: #c3bcf9;
}

.emotion-8[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
}

.emotion-8[disabled] + .fp-Icon {
  color: #8d8d8d;
  fill: #8d8d8d;
}

.emotion-8:focus {
  outline: unset;
  z-index: 2;
  border-color: #3722ed;
  box-shadow: #ebe8fd 0px 0px 0px 3px !important;
}

.emotion-11 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-23 {
  background-color: #3722ed !important;
}

<div
  class="emotion-3 emotion-1 emotion-23 fp-Box fp-SelectField"
>
  <div
    class="emotion-3 emotion-1 emotion-2 fp-Box fp-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-7 fp-Box"
    >
      <div
        class="emotion-1 emotion-5 fp-Box"
      >
        <label
          class="emotion-0 emotion-1 emotion-2 emotion-3 fp-FieldWrapperLabel fp-Box fp-Label"
          for="FieldWrapper"
        >
          This is a label
        </label>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2 emotion-17 fp-SelectWrapper fp-Box"
    >
      <select
        aria-invalid="false"
        class="emotion-8 emotion-1 emotion-2 fp-Box fp-Select"
        id="FieldWrapper"
      >
        <option
          value="sunny"
        >
          Sunny
        </option>
        <option
          value="windy"
        >
          Windy
        </option>
        <option
          value="overcast"
        >
          Overcast
        </option>
      </select>
      <svg
        class="emotion-11 emotion-1 emotion-2 emotion-14 fp-SelectIcon fp-Box fp-Icon"
        role="img"
        viewBox="0 0 448 512"
      >
        <path
          d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`props should render correctly with a default value 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-7 {
  margin-bottom: 0.5rem !important;
}

.emotion-5 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  line-height: 1 !important;
}

.emotion-0 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-17 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-14.emotion-14 {
  position: absolute;
  width: 0.8em;
  height: 2.5em;
  right: 0.8em;
  z-index: 1;
  color: #212121;
  fill: #212121;
  pointer-events: none;
}

.emotion-8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #d9d9d9;
  border-radius: 0.2em;
  color: #212121;
  height: 2.5em;
  padding: 0.4em 2em 0.4em 0.6em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-8:hover {
  box-shadow: #ebe8fd 0px 0px 0px 2px !important;
  border-color: #c3bcf9;
}

.emotion-8[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
}

.emotion-8[disabled] + .fp-Icon {
  color: #8d8d8d;
  fill: #8d8d8d;
}

.emotion-8:focus {
  outline: unset;
  z-index: 2;
  border-color: #3722ed;
  box-shadow: #ebe8fd 0px 0px 0px 3px !important;
}

.emotion-11 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

<div
  class="emotion-3 emotion-1 emotion-2 fp-Box fp-SelectField"
>
  <div
    class="emotion-3 emotion-1 emotion-2 fp-Box fp-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-7 fp-Box"
    >
      <div
        class="emotion-1 emotion-5 fp-Box"
      >
        <label
          class="emotion-0 emotion-1 emotion-2 emotion-3 fp-FieldWrapperLabel fp-Box fp-Label"
          for="FieldWrapper"
        >
          This is a label
        </label>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2 emotion-17 fp-SelectWrapper fp-Box"
    >
      <select
        aria-invalid="false"
        class="emotion-8 emotion-1 emotion-2 fp-Box fp-Select"
        id="FieldWrapper"
      >
        <option
          selected=""
          value="sunny"
        >
          Sunny
        </option>
        <option
          value="windy"
        >
          Windy
        </option>
        <option
          value="overcast"
        >
          Overcast
        </option>
      </select>
      <svg
        class="emotion-11 emotion-1 emotion-2 emotion-14 fp-SelectIcon fp-Box fp-Icon"
        role="img"
        viewBox="0 0 448 512"
      >
        <path
          d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`props should render correctly with disabled 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-7 {
  margin-bottom: 0.5rem !important;
}

.emotion-5 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  line-height: 1 !important;
}

.emotion-0 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-17 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-14.emotion-14 {
  position: absolute;
  width: 0.8em;
  height: 2.5em;
  right: 0.8em;
  z-index: 1;
  color: #212121;
  fill: #212121;
  pointer-events: none;
}

.emotion-8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #d9d9d9;
  border-radius: 0.2em;
  color: #212121;
  height: 2.5em;
  padding: 0.4em 2em 0.4em 0.6em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-8:hover {
  box-shadow: #ebe8fd 0px 0px 0px 2px !important;
  border-color: #c3bcf9;
}

.emotion-8[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
}

.emotion-8[disabled] + .fp-Icon {
  color: #8d8d8d;
  fill: #8d8d8d;
}

.emotion-8:focus {
  outline: unset;
  z-index: 2;
  border-color: #3722ed;
  box-shadow: #ebe8fd 0px 0px 0px 3px !important;
}

.emotion-11 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

<div
  class="emotion-3 emotion-1 emotion-2 fp-Box fp-SelectField"
>
  <div
    class="emotion-3 emotion-1 emotion-2 fp-Box fp-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-7 fp-Box"
    >
      <div
        class="emotion-1 emotion-5 fp-Box"
      >
        <label
          class="emotion-0 emotion-1 emotion-2 emotion-3 fp-FieldWrapperLabel fp-Box fp-Label"
          for="FieldWrapper"
        >
          This is a label
        </label>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2 emotion-17 fp-SelectWrapper fp-Box"
    >
      <select
        aria-invalid="false"
        class="emotion-8 emotion-1 emotion-2 fp-Box fp-Select"
        disabled=""
        id="FieldWrapper"
      >
        <option
          disabled=""
          value="sunny"
        >
          Sunny
        </option>
        <option
          disabled=""
          value="windy"
        >
          Windy
        </option>
        <option
          disabled=""
          value="overcast"
        >
          Overcast
        </option>
      </select>
      <svg
        class="emotion-11 emotion-1 emotion-2 emotion-14 fp-SelectIcon fp-Box fp-Icon"
        role="img"
        viewBox="0 0 448 512"
      >
        <path
          d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`props should render correctly with isLoading 1`] = `
@keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-7 {
  margin-bottom: 0.5rem !important;
}

.emotion-5 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  line-height: 1 !important;
}

.emotion-0 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-19 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-16.emotion-16 {
  font-size: inherit;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  height: 2.5em;
  margin: 0 0.75em;
  top: 0;
  right: 0;
  z-index: 2;
}

.emotion-8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #d9d9d9;
  border-radius: 0.2em;
  color: #212121;
  height: 2.5em;
  padding: 0.4em 2em 0.4em 0.6em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-8:hover {
  box-shadow: #ebe8fd 0px 0px 0px 2px !important;
  border-color: #c3bcf9;
}

.emotion-8[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
}

.emotion-8[disabled] + .fp-Icon {
  color: #8d8d8d;
  fill: #8d8d8d;
}

.emotion-8:focus {
  outline: unset;
  z-index: 2;
  border-color: #3722ed;
  box-shadow: #ebe8fd 0px 0px 0px 3px !important;
}

.emotion-15 {
  color: #212121 !important;
}

.emotion-13 {
  line-height: 1rem;
  font-size: 20px;
}

.emotion-12 {
  width: 1em;
  height: 1em;
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  -webkit-animation: animation-0 0.6s infinite linear;
  animation: animation-0 0.6s infinite linear;
}

.emotion-11 {
  stroke-dasharray: 275;
  stroke-dashoffset: 200px;
  stroke: #212121;
  -webkit-transition: stroke-dashoffset 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: stroke-dashoffset 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

<div
  class="emotion-3 emotion-1 emotion-2 fp-Box fp-SelectField"
>
  <div
    class="emotion-3 emotion-1 emotion-2 fp-Box fp-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-7 fp-Box"
    >
      <div
        class="emotion-1 emotion-5 fp-Box"
      >
        <label
          class="emotion-0 emotion-1 emotion-2 emotion-3 fp-FieldWrapperLabel fp-Box fp-Label"
          for="FieldWrapper"
        >
          This is a label
        </label>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2 emotion-19 fp-SelectWrapper fp-Box"
    >
      <select
        aria-invalid="false"
        class="emotion-8 emotion-1 emotion-2 fp-Box fp-Select"
        id="FieldWrapper"
      >
        <option
          value="sunny"
        >
          Sunny
        </option>
        <option
          value="windy"
        >
          Windy
        </option>
        <option
          value="overcast"
        >
          Overcast
        </option>
      </select>
      <div
        class="emotion-13 emotion-1 emotion-15 emotion-16 fp-SelectSpinner fp-Box fp-Spinner"
      >
        <svg
          class="emotion-12 fp-Spinnervector"
          viewBox="22 22 44 44"
        >
          <circle
            class="emotion-11 fp-SpinnerloaderCircle"
            cx="44"
            cy="44"
            fill="none"
            r="20"
            stroke-width="4"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`props should render correctly with isRequired 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  color: #bb2a1a;
  margin-left: 0.25rem;
  font-weight: 600;
  font-size: 0.875rem;
}

.emotion-10 {
  margin-bottom: 0.5rem !important;
}

.emotion-8 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  line-height: 1 !important;
}

.emotion-0 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-20 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-17.emotion-17 {
  position: absolute;
  width: 0.8em;
  height: 2.5em;
  right: 0.8em;
  z-index: 1;
  color: #212121;
  fill: #212121;
  pointer-events: none;
}

.emotion-11 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #d9d9d9;
  border-radius: 0.2em;
  color: #212121;
  height: 2.5em;
  padding: 0.4em 2em 0.4em 0.6em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-11:hover {
  box-shadow: #ebe8fd 0px 0px 0px 2px !important;
  border-color: #c3bcf9;
}

.emotion-11[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
}

.emotion-11[disabled] + .fp-Icon {
  color: #8d8d8d;
  fill: #8d8d8d;
}

.emotion-11:focus {
  outline: unset;
  z-index: 2;
  border-color: #3722ed;
  box-shadow: #ebe8fd 0px 0px 0px 3px !important;
}

.emotion-14 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

<div
  class="emotion-3 emotion-1 emotion-2 fp-Box fp-SelectField"
>
  <div
    class="emotion-3 emotion-1 emotion-2 fp-Box fp-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-10 fp-Box"
    >
      <div
        class="emotion-1 emotion-8 fp-Box"
      >
        <label
          class="emotion-0 emotion-1 emotion-2 emotion-3 fp-FieldWrapperLabel fp-Box fp-Label"
          for="FieldWrapper"
        >
          This is a label
        </label>
        <div
          class="emotion-1 emotion-2 emotion-6 fp-FieldWrapperRequiredText fp-Box"
        >
          *
        </div>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2 emotion-20 fp-SelectWrapper fp-Box"
    >
      <select
        aria-invalid="false"
        aria-required="true"
        class="emotion-11 emotion-1 emotion-2 fp-Box fp-Select"
        id="FieldWrapper"
      >
        <option
          value="sunny"
        >
          Sunny
        </option>
        <option
          value="windy"
        >
          Windy
        </option>
        <option
          value="overcast"
        >
          Overcast
        </option>
      </select>
      <svg
        class="emotion-14 emotion-1 emotion-2 emotion-17 fp-SelectIcon fp-Box fp-Icon"
        role="img"
        viewBox="0 0 448 512"
      >
        <path
          d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`props should render correctly with name 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-7 {
  margin-bottom: 0.5rem !important;
}

.emotion-5 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  line-height: 1 !important;
}

.emotion-0 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-17 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-14.emotion-14 {
  position: absolute;
  width: 0.8em;
  height: 2.5em;
  right: 0.8em;
  z-index: 1;
  color: #212121;
  fill: #212121;
  pointer-events: none;
}

.emotion-8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #d9d9d9;
  border-radius: 0.2em;
  color: #212121;
  height: 2.5em;
  padding: 0.4em 2em 0.4em 0.6em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-8:hover {
  box-shadow: #ebe8fd 0px 0px 0px 2px !important;
  border-color: #c3bcf9;
}

.emotion-8[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
}

.emotion-8[disabled] + .fp-Icon {
  color: #8d8d8d;
  fill: #8d8d8d;
}

.emotion-8:focus {
  outline: unset;
  z-index: 2;
  border-color: #3722ed;
  box-shadow: #ebe8fd 0px 0px 0px 3px !important;
}

.emotion-11 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

<div
  class="emotion-3 emotion-1 emotion-2 fp-Box fp-SelectField"
>
  <div
    class="emotion-3 emotion-1 emotion-2 fp-Box fp-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-7 fp-Box"
    >
      <div
        class="emotion-1 emotion-5 fp-Box"
      >
        <label
          class="emotion-0 emotion-1 emotion-2 emotion-3 fp-FieldWrapperLabel fp-Box fp-Label"
          for="FieldWrapper"
        >
          This is a label
        </label>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2 emotion-17 fp-SelectWrapper fp-Box"
    >
      <select
        aria-invalid="false"
        class="emotion-8 emotion-1 emotion-2 fp-Box fp-Select"
        id="FieldWrapper"
        name="test"
      >
        <option
          value="sunny"
        >
          Sunny
        </option>
        <option
          value="windy"
        >
          Windy
        </option>
        <option
          value="overcast"
        >
          Overcast
        </option>
      </select>
      <svg
        class="emotion-11 emotion-1 emotion-2 emotion-14 fp-SelectIcon fp-Box fp-Icon"
        role="img"
        viewBox="0 0 448 512"
      >
        <path
          d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`props should render placeholder correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-7 {
  margin-bottom: 0.5rem !important;
}

.emotion-5 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  line-height: 1 !important;
}

.emotion-0 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-17 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-14.emotion-14 {
  position: absolute;
  width: 0.8em;
  height: 2.5em;
  right: 0.8em;
  z-index: 1;
  color: #212121;
  fill: #212121;
  pointer-events: none;
}

.emotion-11 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #d9d9d9;
  border-radius: 0.2em;
  color: #797979;
  height: 2.5em;
  padding: 0.4em 2em 0.4em 0.6em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-8:hover {
  box-shadow: #ebe8fd 0px 0px 0px 2px !important;
  border-color: #c3bcf9;
}

.emotion-8[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
}

.emotion-8[disabled] + .fp-Icon {
  color: #8d8d8d;
  fill: #8d8d8d;
}

.emotion-8:focus {
  outline: unset;
  z-index: 2;
  border-color: #3722ed;
  box-shadow: #ebe8fd 0px 0px 0px 3px !important;
}

<div
  class="emotion-3 emotion-1 emotion-2 fp-Box fp-SelectField"
>
  <div
    class="emotion-3 emotion-1 emotion-2 fp-Box fp-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-7 fp-Box"
    >
      <div
        class="emotion-1 emotion-5 fp-Box"
      >
        <label
          class="emotion-0 emotion-1 emotion-2 emotion-3 fp-FieldWrapperLabel fp-Box fp-Label"
          for="FieldWrapper"
        >
          This is a label
        </label>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2 emotion-17 fp-SelectWrapper fp-Box"
    >
      <select
        aria-invalid="false"
        class="emotion-8 emotion-1 emotion-2 fp-Box fp-Select"
        id="FieldWrapper"
      >
        <option
          value=""
        >
          Please select...
        </option>
        <option
          value="sunny"
        >
          Sunny
        </option>
        <option
          value="windy"
        >
          Windy
        </option>
        <option
          value="overcast"
        >
          Overcast
        </option>
      </select>
      <svg
        class="emotion-11 emotion-1 emotion-2 emotion-14 fp-SelectIcon fp-Box fp-Icon"
        role="img"
        viewBox="0 0 448 512"
      >
        <path
          d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`theming SelectField.root should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-7 {
  margin-bottom: 0.5rem !important;
}

.emotion-5 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  line-height: 1 !important;
}

.emotion-0 {
  display: block;
  font-weight: 600;
  line-height: 1;
}

.emotion-17 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-14.emotion-14 {
  position: absolute;
  width: 0.8em;
  height: 2.5em;
  right: 0.8em;
  z-index: 1;
  color: #212121;
  fill: #212121;
  pointer-events: none;
}

.emotion-11 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #d9d9d9;
  border-radius: 0.2em;
  color: #797979;
  height: 2.5em;
  padding: 0.4em 2em 0.4em 0.6em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-8:hover {
  box-shadow: #ebe8fd 0px 0px 0px 2px !important;
  border-color: #c3bcf9;
}

.emotion-8[disabled] {
  background: #f2f2f2;
  box-shadow: unset;
}

.emotion-8[disabled] + .fp-Icon {
  color: #8d8d8d;
  fill: #8d8d8d;
}

.emotion-8:focus {
  outline: unset;
  z-index: 2;
  border-color: #3722ed;
  box-shadow: #ebe8fd 0px 0px 0px 3px !important;
}

.emotion-21 {
  background-color: red;
}

<div
  class="emotion-21 emotion-1 emotion-2 fp-Box fp-SelectField"
>
  <div
    class="emotion-3 emotion-1 emotion-2 fp-Box fp-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-7 fp-Box"
    >
      <div
        class="emotion-1 emotion-5 fp-Box"
      >
        <label
          class="emotion-0 emotion-1 emotion-2 emotion-3 fp-FieldWrapperLabel fp-Box fp-Label"
          for="FieldWrapper"
        >
          This is a label
        </label>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2 emotion-17 fp-SelectWrapper fp-Box"
    >
      <select
        aria-invalid="false"
        class="emotion-8 emotion-1 emotion-2 fp-Box fp-Select"
        id="FieldWrapper"
      >
        <option
          value=""
        >
          Please select...
        </option>
        <option
          value="sunny"
        >
          Sunny
        </option>
        <option
          value="windy"
        >
          Windy
        </option>
        <option
          value="overcast"
        >
          Overcast
        </option>
      </select>
      <svg
        class="emotion-11 emotion-1 emotion-2 emotion-14 fp-SelectIcon fp-Box fp-Icon"
        role="img"
        viewBox="0 0 448 512"
      >
        <path
          d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</div>
`;
